syntax = "proto3";

option csharp_namespace = "Task1.CQRS_MediatR_Using_gRPC.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service EventsHistory {
  rpc GetEvents (GetEventsRequest) returns (Response);
}

message GetEventsRequest{
	int32 current_page = 1;
	int32 page_size = 2;
}

message Response {
  repeated EventMessage events = 1;
}

message EventMessage {
  string correlation_id = 1;
  google.protobuf.Timestamp date_time = 2;
  string data = 3;
  string type = 4;
  int32 sequence = 5;
  int32 version = 6;
  string aggregate_id = 7;
  string user_id = 8;
}